--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-i18next": "^14.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
