--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-error-boundary": "^4.0.13",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.1",
+    "swiper": "^11.1.14",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
